[DASH-1379] Update Proto Rig API Version to 1.8.0 (#1195)
