# server/generated/miner-api/miner_command_api/miner_command_api.pb.go
@@ -210,11 +210,12 @@ func (x *PowerTargetRequest) GetHashOnDisconnect() bool {
 }
 
 type CoolingModeRequest struct {
-	state           protoimpl.MessageState     `protogen:"open.v1"`
-	Mode            miner_data_api.CoolingMode `protobuf:"varint,1,opt,name=mode,proto3,enum=miner_data_api.CoolingMode" json:"mode,omitempty"`
-	SpeedPercentage *uint32                    `protobuf:"varint,2,opt,name=speed_percentage,json=speedPercentage,proto3,oneof" json:"speed_percentage,omitempty"` // only used for Manual mode
-	unknownFields   protoimpl.UnknownFields
-	sizeCache       protoimpl.SizeCache
+	state              protoimpl.MessageState     `protogen:"open.v1"`
+	Mode               miner_data_api.CoolingMode `protobuf:"varint,1,opt,name=mode,proto3,enum=miner_data_api.CoolingMode" json:"mode,omitempty"`
+	SpeedPercentage    *uint32                    `protobuf:"varint,2,opt,name=speed_percentage,json=speedPercentage,proto3,oneof" json:"speed_percentage,omitempty"`             // only used for Manual mode
+	TargetTemperatureC *float32                   `protobuf:"fixed32,3,opt,name=target_temperature_c,json=targetTemperatureC,proto3,oneof" json:"target_temperature_c,omitempty"` // only used for Auto mode, override the default temperature target
+	unknownFields      protoimpl.UnknownFields
+	sizeCache          protoimpl.SizeCache
 }
 
 func (x *CoolingModeRequest) Reset() {
@@ -257,6 +258,13 @@ func (x *CoolingModeRequest) GetMode() miner_data_api.CoolingMode {
 func (x *CoolingModeRequest) GetSpeedPercentage() uint32 {
 	if x != nil && x.SpeedPercentage != nil {
 		return *x.SpeedPercentage
+	}
+	return 0
+}
+
+func (x *CoolingModeRequest) GetTargetTemperatureC() float32 {
+	if x != nil && x.TargetTemperatureC != nil {
+		return *x.TargetTemperatureC
 	}
 	return 0
 }
@@ -380,16 +388,21 @@ var file_miner_command_api_proto_rawDesc = string([]byte{
 	0x65, 0x63, 0x74, 0x18, 0x04, 0x20, 0x01, 0x28, 0x08, 0x48, 0x00, 0x52, 0x10, 0x68, 0x61, 0x73,
 	0x68, 0x4f, 0x6e, 0x44, 0x69, 0x73, 0x63, 0x6f, 0x6e, 0x6e, 0x65, 0x63, 0x74, 0x88, 0x01, 0x01,
 	0x42, 0x15, 0x0a, 0x13, 0x5f, 0x68, 0x61, 0x73, 0x68, 0x5f, 0x6f, 0x6e, 0x5f, 0x64, 0x69, 0x73,
-	0x63, 0x6f, 0x6e, 0x6e, 0x65, 0x63, 0x74, 0x22, 0x8a, 0x01, 0x0a, 0x12, 0x43, 0x6f, 0x6f, 0x6c,
+	0x63, 0x6f, 0x6e, 0x6e, 0x65, 0x63, 0x74, 0x22, 0xda, 0x01, 0x0a, 0x12, 0x43, 0x6f, 0x6f, 0x6c,
 	0x69, 0x6e, 0x67, 0x4d, 0x6f, 0x64, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x2f,
 	0x0a, 0x04, 0x6d, 0x6f, 0x64, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0e, 0x32, 0x1b, 0x2e, 0x6d,
 	0x69, 0x6e, 0x65, 0x72, 0x5f, 0x64, 0x61, 0x74, 0x61, 0x5f, 0x61, 0x70, 0x69, 0x2e, 0x43, 0x6f,
 	0x6f, 0x6c, 0x69, 0x6e, 0x67, 0x4d, 0x6f, 0x64, 0x65, 0x52, 0x04, 0x6d, 0x6f, 0x64, 0x65, 0x12,
 	0x2e, 0x0a, 0x10, 0x73, 0x70, 0x65, 0x65, 0x64, 0x5f, 0x70, 0x65, 0x72, 0x63, 0x65, 0x6e, 0x74,
 	0x61, 0x67, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0d, 0x48, 0x00, 0x52, 0x0f, 0x73, 0x70, 0x65,
-	0x65, 0x64, 0x50, 0x65, 0x72, 0x63, 0x65, 0x6e, 0x74, 0x61, 0x67, 0x65, 0x88, 0x01, 0x01, 0x42,
-	0x13, 0x0a, 0x11, 0x5f, 0x73, 0x70, 0x65, 0x65, 0x64, 0x5f, 0x70, 0x65, 0x72, 0x63, 0x65, 0x6e,
-	0x74, 0x61, 0x67, 0x65, 0x22, 0x3a, 0x0a, 0x0c, 0x50, 0x6f, 0x6f, 0x6c, 0x73, 0x52, 0x65, 0x71,
+	0x65, 0x64, 0x50, 0x65, 0x72, 0x63, 0x65, 0x6e, 0x74, 0x61, 0x67, 0x65, 0x88, 0x01, 0x01, 0x12,
+	0x35, 0x0a, 0x14, 0x74, 0x61, 0x72, 0x67, 0x65, 0x74, 0x5f, 0x74, 0x65, 0x6d, 0x70, 0x65, 0x72,
+	0x61, 0x74, 0x75, 0x72, 0x65, 0x5f, 0x63, 0x18, 0x03, 0x20, 0x01, 0x28, 0x02, 0x48, 0x01, 0x52,
+	0x12, 0x74, 0x61, 0x72, 0x67, 0x65, 0x74, 0x54, 0x65, 0x6d, 0x70, 0x65, 0x72, 0x61, 0x74, 0x75,
+	0x72, 0x65, 0x43, 0x88, 0x01, 0x01, 0x42, 0x13, 0x0a, 0x11, 0x5f, 0x73, 0x70, 0x65, 0x65, 0x64,
+	0x5f, 0x70, 0x65, 0x72, 0x63, 0x65, 0x6e, 0x74, 0x61, 0x67, 0x65, 0x42, 0x17, 0x0a, 0x15, 0x5f,
+	0x74, 0x61, 0x72, 0x67, 0x65, 0x74, 0x5f, 0x74, 0x65, 0x6d, 0x70, 0x65, 0x72, 0x61, 0x74, 0x75,
+	0x72, 0x65, 0x5f, 0x63, 0x22, 0x3a, 0x0a, 0x0c, 0x50, 0x6f, 0x6f, 0x6c, 0x73, 0x52, 0x65, 0x71,
 	0x75, 0x65, 0x73, 0x74, 0x12, 0x2a, 0x0a, 0x05, 0x70, 0x6f, 0x6f, 0x6c, 0x73, 0x18, 0x01, 0x20,
 	0x03, 0x28, 0x0b, 0x32, 0x14, 0x2e, 0x6d, 0x69, 0x6e, 0x65, 0x72, 0x5f, 0x64, 0x61, 0x74, 0x61,
 	0x5f, 0x61, 0x70, 0x69, 0x2e, 0x50, 0x6f, 0x6f, 0x6c, 0x52, 0x05, 0x70, 0x6f, 0x6f, 0x6c, 0x73,
